Update the MGF module and add a THERMO module: * MGF module: add scan_number field, allows to define a Writer capacity, and to optionally round values in write_spectrum * THERMO module: first version (depends on "https://github.com/david-bouyssie/thermo-raw-file-streamer")

--- a/mzio-rs/Cargo.toml
+++ b/mzio-rs/Cargo.toml
@@ -12,15 +12,20 @@ publish = false
 
 [lib]
 name = "mzio"
+doctest = false ### for dev purpose only
 # crate-type = ["cdylib"]
 
 [dependencies]
 anyhow = "1.0.75"
 fallible-iterator = "0.2.0"
 fast-float = { version = "0.2.0" , optional = true }
-serde = "*"
+serde = "1.0.190"
 mzcore = { path = "../../mzcore/mzcore-rs" }
+thermo-raw-file-streamer = { git = "https://github.com/david-bouyssie/thermo-raw-file-streamer.git", optional = true }
+#thermo-raw-file-streamer = { path = "../../thermo-raw-file-streamer", optional = true }
+
 
 [features]
 fasta = []
 mgf = ["dep:fast-float"]
+thermo = ["dep:thermo-raw-file-streamer"]
